--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,26 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+  assets:
+    # - assets/
+    - images/
+    # - assets/gif/
+    # - lib/data/data_language/question_languages_one.json
+    # - lib/data/data_language/question_languages_two.json
+    # - lib/data/data_language/word.json
+    # - assets/images/
+    # - assets/Animal/
+    # - assets/Fruit/
+    # - assets/Household/
+    # - assets/Transportation/
+    # - assets/images/weapon/
+    # - assets/images/enemy/
+    # - assets/weaponParams.json
+    # - assets/enemyParams.json
+    # - assets/images/Attention/Question/
+    # - assets/images/Attention/Solution/
+    # - lib/data/data_attention/game_one_attention.json
+
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
